estilização da tabela padrão concluída

--- a/pages/index.html
+++ b/pages/index.html
@@ -79,11 +79,223 @@
                 <div class="area-tabela">
                     <div class="titulo-filtros">
                         <h1>Todos os Relatórios</h1>
+
                         <div class="area-filtros">
-                            <select name="" id=""></select>
-                        </div>
-                    </div>
-                </div>
+                            <select name="select-relatorio-tipo" id="select-relatorio-tipo">
+                                <option value="select-relatorio-tipo-todos">tipo</option>
+                                <option value="select-relatorio-tipo-diario">diário</option>
+                                <option value="select-relatorio-tipo-semanal">semanal</option>
+                                <option value="select-relatorio-tipo-anual">anual</option>
+                            </select>
+                            <select name="select-relatorio-data" id="elect-relatorio-data">
+                                <option value="select-relatorio-data-todos">período</option>
+                                <option value="select-relatorio-data-hoje">Hoje</option>
+                                <option value="select-relatorio-data-seteDias">7 dias</option>
+                                <option value="select-relatorio-data-trintaDias">30 dias</option>
+                                <option value="select-relatorio-data-essaSemana">Essa Semana</option>
+                                <option value="select-relatorio-data-esseMes">Esse Mês</option>
+                                <option value="select-relatorio-data-esseAno">Esse Ano</option>
+                                <option value="select-relatorio-data-personalizado">personalizado</option>
+                            </select>
+                            <select name="select-relatorio-ordenar" id="select-relatorio-ordenar">
+                                <option value="select-relatorio-ordenar-recente">Mais Recente</option>
+                                <option value="select-relatorio-ordenar-antigo">antigo</option>
+                                <option value="select-relatorio-ordenar-codigo">codigo</option>
+                                <option value="select-relatorio-ordenar-tipo">tipo</option>
+                            </select>
+                        </div><!-- .area-filtros -->
+                    </div> <!-- .titulo-filtros -->
+
+                    <table class="tabela-padrao" id="tabela-todos-relatorios">
+                        <thead>
+                            <tr>
+                                <td>Data</td>
+                                <td>Hora</td>
+                                <td>Relatorio</td>
+                                <td> </td>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>12/12/12</td>
+                                <td>00:00</td>
+                                <td>01234</td>
+                                <td class="tabela-padrao-td-button">
+                                    <button type="button">Abrir</button>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                    </table>
+                </div> <!-- .area-tabela -->
+
+                <footer>
+                    <img src="../img/logo-black.png" alt="">
+                </footer>
 
             </section>
         </main>
