--- a/pages/index.html
+++ b/pages/index.html
@@ -302,7 +302,7 @@
     <!-- ====================== SCRIPTS ====================== -->
 
     <!-- ÍCONES = https://ionic.io/ionicons/  -->
-     <script type="module" src="../ts/main.ts"></script>
+    //<script type="module" src="../ts/main.ts"></script>
 
 </body>
 
