iniciando funçes para eventos no sidebar

--- a/pages/index.html
+++ b/pages/index.html
@@ -45,31 +45,32 @@
             <ul class="sidebar">
                 <li class="categoria-sidebar">
                     <ul>
-                        <li class="item-principal">Agenda</li>
-                        <li>Esta Semana</li>
-                        <li>Este Mês</li>
+                        <li class="item-principal" id="categoria-sidebar-agenda-todos">Agenda</li>
+                        <li id="categoria-sidebar-agenda-semana">Esta Semana</li>
+                        <li id="categoria-sidebar-agenda-mes">Este Mês</li>
                     </ul>
                 </li>
                 <li class="categoria-sidebar">
                     <ul>
-                        <li class="item-principal">Todos os Exames</li>
-                        <li>Concluídos</li>
-                        <li>Pendentes</li>
-                        <li>Cancelados</li>
+                        <li class="item-principal" id="categoria-sidebar-exames-todos">Todos os Exames</li>
+                        <li id="categoria-sidebar-exames-concluidos">Concluídos</li>
+                        <li id="categoria-sidebar-exames-pendentes">Pendentes</li>
+                        <li id="categoria-sidebar-exames-cancelados">Cancelados</li>
                     </ul>
                 </li>
                 <li class="categoria-sidebar">
                     <ul>
-                        <li class="item-principal">GDL</li>
-                        <li>Encaminhar ao GDL</li>
+                        <li class="item-principal" id="categoria-sidebar-gdl-todos">GDL</li>
+                        <li id="categoria-sidebar-gdl-encaminhar">Encaminhar ao GDL</li>
                     </ul>
                 </li>
                 <li class="categoria-sidebar">
                     <ul>
-                        <li class="item-principal">Todos os Relatórios</li>
-                        <li>Diário</li>
-                        <li>Mensal</li>
-                        <li>Anual</li>
+                        <li class="item-principal" id="categoria-sidebar-relatorios-todos">Todos os Relatórios</li>
+                        <li id="categoria-sidebar-relatorios-diario">Diário</li>
+                        <li id="categoria-sidebar-relatorios-semanal">Semanal</li>
+                        <li id="categoria-sidebar-relatorios-mensal">Mensal</li>
+                        <li id="categoria-sidebar-relatorios-anual">Anual</li>
                     </ul>
                 </li>
             </ul>
@@ -106,188 +107,9 @@
                     </div> <!-- .titulo-filtros -->
 
                     <table class="tabela-padrao" id="tabela-todos-relatorios">
-                        <thead>
-                            <tr>
-                                <td>Data</td>
-                                <td>Hora</td>
-                                <td>Relatorio</td>
-                                <td> </td>
-                            </tr>
-                        </thead>
+                        <thead></thead>
 
-                        <tbody>
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>12/12/12</td>
-                                <td>00:00</td>
-                                <td>01234</td>
-                                <td class="tabela-padrao-td-button">
-                                    <button type="button">Abrir</button>
-                                </td>
-                            </tr>
-                        </tbody>
+                        <tbody></tbody>
 
                     </table>
                 </div> <!-- .area-tabela -->
