tela para criar exames e ajustes para anexar eventos (não está funcionando por ter que compilar)

--- a/pages/index.html
+++ b/pages/index.html
@@ -120,11 +120,11 @@
             </section>
         </main>
     </div>
-
+    
     <!-- ====================== SCRIPTS ====================== -->
 
     <!-- ÍCONES = https://ionic.io/ionicons/  -->
-    //<script type="module" src="../ts/main.ts"></script>
+    <script type="module" src="../ts/main.ts"></script>
 
 </body>
 
