tela para criar exames

--- a/pages/criarExame.html
+++ b/pages/criarExame.html
@@ -86,6 +86,7 @@
 
                             <div class="inputs-area-info info-pessoais">
                                 <p>Informações Pessoais</p>
+
                                 <div class="inputs-area">
                                     <label for="nome-criar-exame">Nome Completo:</label>
                                     <input type="text" name="nome-criar-exame">
@@ -94,6 +95,11 @@
                                 <div class="inputs-area">
                                     <label for="dtNasc-criar-exame">Data Nascimento:</label>
                                     <input type="date" name="dtNasc-criar-exame">
+                                </div>
+
+                                <div class="inputs-area">
+                                    <label for="telefone-criar-exame">Telefone:</label>
+                                    <input type="tel" name="telefone-criar-exame">
                                 </div>
 
                                 <div class="inputs-area inputs-area-radio">
@@ -137,6 +143,21 @@
                                 </div>
 
                             </div> <!-- .info-endereco -->
+
+                            <hr>
+
+                            <div class="inputs-area-info info-ocorrencia">
+
+                                <div class="inputs-area">
+                                    <p>Arquivo do Boletim de Ocorrência:</p>
+                                    <div class="drop-upload-boletimOcorrencia"></div>
+                                </div>
+
+                                <div class="inputs-area inputs-area-boletimOcorrencia">
+                                    <label for="boletimOcorrencia-criar-exame">Número B.O:</label>
+                                    <input type="number" name="boletimOcorrencia-criar-exame">
+                                </div>
+                            </div>
 
                             <div class="inputs-area div-textarea">
                                 <label for="obs-criar-exame">Observações:</label>
