todos os arquivos organizados; Criação dos  cards de exames para lista de exames do index.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Sistema Agendamento</title>
 </head>
 
@@ -15,7 +15,7 @@
         <header class="navbar">
             <div class="logo-perfil">
                 <a href="#" class="logo-header">
-                    <img src="../img/logo.png" alt="">
+                    <img src="./assets/img/logo.png" alt="">
                 </a>
                 <h1>Secretaria</h1>
             </div>
@@ -31,13 +31,13 @@
 
                     <div class="pesquisa">
                         <input type="text">
-                        <img src="../img/icon/search-sharp.svg" alt="">
+                        <img src="./assets/img/icon/search-sharp.svg" alt="">
                     </div>
                 </div>
 
                 <ul class="links-navbar">
-                    <li><img src="../img/icon/notifications-sharp-white.png" alt=""></li>
-                    <li><img src="../img/icon/settings-sharp-white.png" alt=""></li>
+                    <li><img src="./assets/img/icon/notifications-sharp-white.png" alt=""></li>
+                    <li><img src="./assets/img/icon/settings-sharp-white.png" alt=""></li>
                 </ul>
             </nav>
         </header>
@@ -176,7 +176,7 @@
                 </section> <!-- .area-tabela -->
 
                 <footer>
-                    <img src="../img/logo-black.png" alt="">
+                    <img src="./assets/img/logo-black.png" alt="">
                 </footer>
             </section>
         </main>
@@ -185,7 +185,7 @@
     <!-- ====================== SCRIPTS ====================== -->
 
     <!-- ÍCONES = https://ionic.io/ionicons/  -->
-    <script type="module" src="../ts/main.ts"></script>
+    <script type="module" src="../dist/main.js"></script>
 
 </body>
 
