inicianto projeto react

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     <!-- ====================== SCRIPTS ====================== -->
 
     <!-- ÍCONES = https://ionic.io/ionicons/  -->
-    <script type="module" src="./src/main.ts"></script>
+    <script type="module" src="./src/index.tsx"></script>
 
 </body>
 
